# EoDD-Discord-chatbot

./: .gitignore  .replit  README.md  boop-bot.py  chat-plus-wolframalpha.py  chatbot-2.py  chatbot-notes.ipynb  chatbot.py  exchanges.json  nltk-chat.py  pyproject.toml  weatherbot.py
